build/log/idf_py_stdout_output_37716
[1/10] Performing build step for 'bootloader'
[1/1] cmd.exe /C "cd /D E:\Espressif\workspace\aac_ic\build\bootloader\esp-idf\esptool_py && python D:/Espressif/frameworks/esp-idf-v5.0.1/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x0 E:/Espressif/workspace/aac_ic/build/bootloader/bootloader.bin"
Bootloader binary size 0x5180 bytes. 0x2e80 bytes (36%) free.
[2/8] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/driver/ucs10100/ussys_tp_driver.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/driver/ucs10100/ussys_tp_driver.c.obj 
ccache D:\Espressif\tools\xtensa-esp32s3-elf\esp-2022r1-11.2.0\xtensa-esp32s3-elf\bin\xtensa-esp32s3-elf-gcc.exe  -IE:/Espressif/workspace/aac_ic/build/config -IE:/Espressif/workspace/aac_ic/main/include -ID:/Espressif/frameworks/esp-idf-v5.0.1/components/newlib/platform_include -ID:/Espressif/frameworks/esp-idf-v5.0.1/components/freertos/FreeRTOS-Kernel/include -ID:/Espressif/frameworks/esp-idf-v5.0.1/components/freertos/esp_additions/include/freertos -ID:/Espressif/frameworks/esp-idf-v5.0.1/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -ID:/Espressif/frameworks/esp-idf-v5.0.1/components/freertos/esp_additions/include -ID:/Espressif/frameworks/esp-idf-v5.0.1/components/esp_hw_support/include -ID:/Espressif/frameworks/esp-idf-v5.0.1/components/esp_hw_support/include/soc -ID:/Espressif/frameworks/esp-idf-v5.0.1/components/esp_hw_support/include/soc/esp32s3 -ID:/Espressif/frameworks/esp-idf-v5.0.1/components/esp_hw_support/port/esp32s3/. -ID:/Espressif/frameworks/esp-idf-v5.0.1/components/esp_hw_support/port/esp32s3/private_include -ID:/Espressif/frameworks/esp-idf-v5.0.1/components/heap/include -ID:/Espressif/frameworks/esp-idf-v5.0.1/components/log/include -ID:/Espressif/frameworks/esp-idf-v5.0.1/components/soc/include -ID:/Espressif/frameworks/esp-idf-v5.0.1/components/soc/esp32s3/. -ID:/Espressif/frameworks/esp-idf-v5.0.1/components/soc/esp32s3/include -ID:/Espressif/frameworks/esp-idf-v5.0.1/components/hal/esp32s3/include -ID:/Espressif/frameworks/esp-idf-v5.0.1/components/hal/include -ID:/Espressif/frameworks/esp-idf-v5.0.1/components/hal/platform_port/include -ID:/Espressif/frameworks/esp-idf-v5.0.1/components/esp_rom/include -ID:/Espressif/frameworks/esp-idf-v5.0.1/components/esp_rom/include/esp32s3 -ID:/Espressif/frameworks/esp-idf-v5.0.1/components/esp_rom/esp32s3 -ID:/Espressif/frameworks/esp-idf-v5.0.1/components/esp_common/include -ID:/Espressif/frameworks/esp-idf-v5.0.1/components/esp_system/include -ID:/Espressif/frameworks/esp-idf-v5.0.1/components/esp_system/port/soc -ID:/Espressif/frameworks/esp-idf-v5.0.1/components/esp_system/port/include/private -ID:/Espressif/frameworks/esp-idf-v5.0.1/components/xtensa/include -ID:/Espressif/frameworks/esp-idf-v5.0.1/components/xtensa/esp32s3/include -ID:/Espressif/frameworks/esp-idf-v5.0.1/components/lwip/include -ID:/Espressif/frameworks/esp-idf-v5.0.1/components/lwip/include/apps -ID:/Espressif/frameworks/esp-idf-v5.0.1/components/lwip/include/apps/sntp -ID:/Espressif/frameworks/esp-idf-v5.0.1/components/lwip/lwip/src/include -ID:/Espressif/frameworks/esp-idf-v5.0.1/components/lwip/port/esp32/include -ID:/Espressif/frameworks/esp-idf-v5.0.1/components/lwip/port/esp32/include/arch -ID:/Espressif/frameworks/esp-idf-v5.0.1/components/driver/include -ID:/Espressif/frameworks/esp-idf-v5.0.1/components/driver/deprecated -ID:/Espressif/frameworks/esp-idf-v5.0.1/components/driver/esp32s3/include -ID:/Espressif/frameworks/esp-idf-v5.0.1/components/esp_pm/include -ID:/Espressif/frameworks/esp-idf-v5.0.1/components/esp_ringbuf/include -ID:/Espressif/frameworks/esp-idf-v5.0.1/components/esp_timer/include -mlongcalls  -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fmacro-prefix-map=E:/Espressif/workspace/aac_ic=. -fmacro-prefix-map=D:/Espressif/frameworks/esp-idf-v5.0.1=/IDF -fstrict-volatile-bitfields -Wno-error=unused-but-set-variable -fno-jump-tables -fno-tree-switch-conversion -DconfigENABLE_FREERTOS_DEBUG_OCDAWARE=1 -std=gnu17 -Wno-old-style-declaration -D_GNU_SOURCE -DIDF_VER=\"v5.0.1-dirty\" -DESP_PLATFORM -D_POSIX_READER_WRITER_LOCKS -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/driver/ucs10100/ussys_tp_driver.c.obj -MF esp-idf\main\CMakeFiles\__idf_main.dir\driver\ucs10100\ussys_tp_driver.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/driver/ucs10100/ussys_tp_driver.c.obj -c E:/Espressif/workspace/aac_ic/main/driver/ucs10100/ussys_tp_driver.c
E:/Espressif/workspace/aac_ic/main/driver/ucs10100/ussys_tp_driver.c: In function 'ussys_tp_read_mem_oneshot':
E:/Espressif/workspace/aac_ic/main/driver/ucs10100/ussys_tp_driver.c:267:12: error: expected expression before 'int'
  267 |         if(int i=0;i < ARRAY_SIZE(buf);i++){
      |            ^~~
In file included from E:/Espressif/workspace/aac_ic/main/driver/ucs10100/ussys_tp_driver.c:32:
E:/Espressif/workspace/aac_ic/main/driver/ucs10100/ussys_tp_driver.c:268:111: error: 'i' undeclared (first use in this function)
  268 |                 debug_info("dev%d(%#X) ussys_tp_read_mem_oneshot 0x%x!\r\n", dev->dev_idx, dev->i2c_addr, buf[i]);
      |                                                                                                               ^
E:/Espressif/workspace/aac_ic/main/include/ussys_tp_driver.h:23:90: note: in definition of macro 'debug_info'
   23 | #define debug_info(...)                                                 printf("[ussys] "__VA_ARGS__)
      |                                                                                          ^~~~~~~~~~~
E:/Espressif/workspace/aac_ic/main/driver/ucs10100/ussys_tp_driver.c:268:111: note: each undeclared identifier is reported only once for each function it appears in
  268 |                 debug_info("dev%d(%#X) ussys_tp_read_mem_oneshot 0x%x!\r\n", dev->dev_idx, dev->i2c_addr, buf[i]);
      |                                                                                                               ^
E:/Espressif/workspace/aac_ic/main/include/ussys_tp_driver.h:23:90: note: in definition of macro 'debug_info'
   23 | #define debug_info(...)                                                 printf("[ussys] "__VA_ARGS__)
      |                                                                                          ^~~~~~~~~~~
E:/Espressif/workspace/aac_ic/main/include/ussys_tp_driver.h:23:80: error: too many arguments for format [-Werror=format-extra-args]
   23 | #define debug_info(...)                                                 printf("[ussys] "__VA_ARGS__)
      |                                                                                ^~~~~~~~~~
E:/Espressif/workspace/aac_ic/main/driver/ucs10100/ussys_tp_driver.c:272:17: note: in expansion of macro 'debug_info'
  272 |                 debug_info("dev%d(%#X) ussys_tp_read_mem_oneshot dev->i2c_write rc, size:%d:!\r\n", dev->dev_idx, dev->i2c_addr, rc, size);
      |                 ^~~~~~~~~~
E:/Espressif/workspace/aac_ic/main/include/ussys_tp_driver.h:23:80: error: too many arguments for format [-Werror=format-extra-args]
   23 | #define debug_info(...)                                                 printf("[ussys] "__VA_ARGS__)
      |                                                                                ^~~~~~~~~~
E:/Espressif/workspace/aac_ic/main/driver/ucs10100/ussys_tp_driver.c:274:17: note: in expansion of macro 'debug_info'
  274 |                 debug_info("dev%d(%#X) ussys_tp_read_mem_oneshot dev->i2c_read rc:!\r\n", dev->dev_idx, dev->i2c_addr, rc);
      |                 ^~~~~~~~~~
cc1.exe: some warnings being treated as errors
ninja: build stopped: subcommand failed.
